# paperfig

./: .gitignore  README.md  pyproject.toml
dev/: upload.sh
docs/: _config.yml  advanced.md  index.md  quickstart.md
docs/examples/: fig-data.json  fig-data.py  fig.json  fig.py
docs/examples/data/: sensor_a.csv  sensor_b.csv
src/paperfig/: __init__.py  cli.py  figure.py
tests/: test_cli.py  test_figure.py
