[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "paperfig"
version = "0.1.0"
description = "JSON-driven orchestration for building and concatenating paper figures."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Katsutoshi Seki" }]
requires-python = ">=3.9"
dependencies = [
  "pdfgridcat>=1.0.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Visualization",
  "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://sekika.github.io/paperfig/"
Documentation = "https://sekika.github.io/paperfig/"
Source = "https://github.com/sekika/paperfig"

[project.optional-dependencies]
examples = [
  "numpy>=1.22",
  "matplotlib>=3.5",
]

[project.scripts]
paperfig = "paperfig.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paperfig"]

[tool.hatch.build.targets.sdist]
include = [
  "src/paperfig",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
